[package]
name = "chariot_palette"
description = "A library for reading/writing JASC palettes"
license = "MIT"
version = "0.1.5"
keywords = ["jasc", "palette"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]
documentation = "https://docs.rs/chariot_palette/"
repository = "https://github.com/ChariotEngine/Palette"
readme = "README.md"

[dependencies]
error-chain = "0.5"
libc = { version = "0.2", optional = true }

[features]
chariot_palette_ffi = ["libc"]

[lib]
crate-type = ["cdylib"]
name = "chariot_palette"